# rustycrab

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ast.cpp  ast.h  ast.hpp  build.sh  driver.cpp  driver.hpp  example-input_basic_example_parser  example-input_basic_example_parser_basic  example-input_basic_example_parser_morebasic  example-input_example_parser  example.rs  flake.nix  lexer.l  main.cpp  parser.y  parser.yy  rust-toolchain.toml  rustfmt.toml  scanner.hpp  semantics.cpp  semantics.hpp  test.c
.github/workflows/: build-lint-test.yaml
_old/: driver.hpp  lexer.l  main.cpp  parser.y
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
rustycrab/: Cargo.toml
rustycrab/src/: command.rs  main.rs
scripts/: bison-shim.sh.in  flex-bison.cmake
tests/: 1.c  2.c  base_example_wordlist.txt  block_statements.txt  declaractions.txt  declarations.txt  declarations_with_initializers.txt  just_constants.txt  just_type_specifiers.txt  main.c  pointers.c  test.c  wordlist.txt
